--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,14 @@
 .main {
   min-height: 100vh;
-  padding: 1rem 0;
+  /* padding: 1rem 2.5rem; */
   flex: 1;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .footer {
@@ -102,14 +107,14 @@
   margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
   }
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 
   .card,
   .footer {
@@ -123,4 +128,37 @@
   .logo img {
     filter: invert(1);
   }
+} */
+
+
+
+/* 
+
+@media (min-width: 576px) {
+
+  .main {
+    max-width: 540px;
+  }
 }
+
+@media (min-width: 768px) {
+
+  .main {
+    max-width: 720px;
+  }
+}
+
+
+@media (min-width: 992px) {
+
+  .main {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+
+  .main {
+    max-width: 1140px;
+  }
+} */
