add load more button

--- a/pages/[gameId]/GameDetails.module.scss
+++ b/pages/[gameId]/GameDetails.module.scss
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     color: #aaa;
-
-
+    position: relative;
+    margin: 0 10rem;
 }
 
 .game-imgae {
