--- a/components/UI/game-card/GameCard.module.scss
+++ b/components/UI/game-card/GameCard.module.scss
@@ -19,6 +19,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin: 0.5rem 0;
 
         &-title {
             white-space: nowrap;
