--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,6 +40,7 @@
 
 .title {
   margin: 0;
+  margin-bottom: 1rem;
   line-height: 1.15;
   font-size: 2rem;
 }
@@ -105,6 +106,12 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.load-more {
+  margin: 2rem 0 ;
+  display: flex;
+  justify-content: center;
 }
 
 /* @media (max-width: 600px) {
